# rustyhook

./: AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  ROADMAP.md
.beads/: beads.left.jsonl  beads.left.meta.json  issues.jsonl
.github/workflows/: release.yml
examples/: combined.yml  cron.yml  example.yml  fs.yml  sqs.yml  webhook.yml
src/: command_executor.rs  config.rs  event.rs  event_bus.rs  main.rs
src/handlers/: cron_handler.rs  filesystem_handler.rs  mod.rs  sqs_handler.rs  webhook_handler.rs
