[package]
name = "rustyhook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.40"
dotenv = "0.15.0"
env_logger = "0.11.8"
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
hyper = { version = "1.6", features = ["full"] }
log = "0.4.25"
aws-config = { version = "1.5", features = ["behavior-version-latest"] }
aws-sdk-sqs = "1.54"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
uuid = { version = "1.11", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3.31"
notify = "8.0.0"
cron = "0.15.0"
chrono = { version = "0.4.41", features = ["serde"] }
globset = "0.4"

[dev-dependencies]
reqwest = { version = "0.12", features = ["blocking"] }
tempfile = "3"
